Modified Composer to add stripe

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
         "magento/composer-dependency-version-audit-plugin": "~0.1",
         "magento/composer-root-update-plugin": "~1.1",
         "magento/product-community-edition": "2.4.3-p1",
+        "skrill/skrill": "^2.3",
+        "stripe/stripe-payments": "^2.9",
         "swissup/module-marketplace": "^1.9"
     },
     "autoload": {
